--- a/views/home.hbs
+++ b/views/home.hbs
@@ -85,27 +85,27 @@
     {{/each}}
     </div>
     </div>
-      <div class="container-fluid d-flex flex-row pt-4 pb-4 mt-3 mb-3" style="background-color: #f37121;">
+      <div class="container-fluid d-flex flex-row flex-wrap justify-content-center pt-2 pb-2 mt-3 mb-3" style="background-color: #f37121;">
         
-       <div class="d-flex flex-column col-3 "><span class="fa-stack fa-8x">
-           <i style="color:#111d5e" class="fa fa-circle fa-stack-2x"></i>
-           <i style="color:#c70039;" class="fa fa-circle fa-stack-1x fa-dollar-sign fa-inverse"></i></span>
-           <h3 class="text-center pt-2" style="color:#111d5e ;">Low Cost<br /> More Savings</h3>
+       <div class="d-flex flex-column justify-content-center col-md-3 "><span class="fa-stack fa-6x">
+           <i style="color:#111d5e; text-align:center; width:100%;" class="fa fa-circle fa-stack-2x container-fluid"></i>
+           <i style="color:#c70039;text-align:center; " class="fa fa-circle fa-stack-1x fa-dollar-sign fa-inverse"></i></span>
+           <h3 class=" text-center pt-2" style="color:#111d5e ;">Low Cost<br /> More Savings</h3>
            </div>
 
-    <div class="d-flex flex-column col-3"><span class="fa-stack fa-8x">
+    <div class="d-flex flex-column col-md-3"><span class="fa-stack fa-6x">
         <i style="color:#111d5e" class="fa fa-circle fa-stack-2x"></i>
         <i style="color:#c70039;" class="fa fa-stack-1x fa-tachometer-alt fa-inverse"></i></span>
         <h3 class="text-center pt-2" style="color:#111d5e ;">High Quality Resolution</h3>
         </div>
 
  
-    <div class="d-flex flex-column col-3"><span class="fa-stack fa-8x">
+    <div class="d-flex flex-column col-md-3"><span class="fa-stack fa-6x">
         <i style="color:#111d5e" class ="fa fa-circle fa-stack-2x"></i>
         <i style="color:#c70039;" class="fab fa-stack-1x fa-slideshare fa-inverse"></i></span>
         <h3 class="text-center pt-2" style="color:#111d5e ;">Enabled Content<br />Sharing</h3>
         </div>
-   <div class="d-flex flex-column col-3"><span class="fa-stack fa-8x">
+   <div class="d-flex flex-column col-md-3"><span class="fa-stack fa-6x">
         <i style="color:#111d5e" class="fa fa-circle fa-stack-2x"></i>
         <i style="color:#c70039;" class="fa fa-stack-1x fa-film fa-inverse"></i></span>
          <h3 class="text-center pt-2" style="color:#111d5e ;">Library of 10,000+<br />Movies and Shows</h3>
