--- a/views/home.hbs
+++ b/views/home.hbs
@@ -85,7 +85,7 @@
     {{/each}}
     </div>
     </div>
-      <div class="container-fluid d-flex flex-row flex-wrap justify-content-center pt-2 pb-2 mt-3 mb-3" style="background-color: #f37121;">
+      <div class="container-fluid d-flex flex-row flex-wrap justify-content-between pt-2 pb-2 mt-3 mb-3" style="background-color: #f37121;">
         
        <div class="d-flex flex-column justify-content-center col-md-3 "><span class="fa-stack fa-6x">
            <i style="color:#111d5e; text-align:center; width:100%;" class="fa fa-circle fa-stack-2x container-fluid"></i>
