--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light ">
+<nav class="navbar navbar-expand-xl navbar-light ">
   <a class="navbar-brand" href="#">  <img src="/img/popcornflix.png" height="80" class="d-inline-block align-top" alt="Logo">
     
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon" ></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
