--- a/views/home.hbs
+++ b/views/home.hbs
@@ -54,135 +54,136 @@
 </div>
 </div>
 
-  <em><h3 class="mt-3 mb-5 text-center">Featured Films:</h3></em>
-  <div class="container d-flex flex-column justify-content-center">
-<div class=" container d-flex flex-row flex-wrap justify-content-between">
+  
+  <div class="container d-flex flex-column align-items-center flex-wrap">
+      <em><h3 class="mt-3 mb-3 text-center">Featured Movies:</h3></em>
+<div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fM}}
 
-     <div class="col-2 mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}">
+     <div class="mt-4 mb-3 d-flex flex-column align-items-center wrapper">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180px">
      </a>
 
-     <h5 class="mt-2 text-center">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
     </div>
 
     {{/each}}
     </div>
     </div>
   
-  <div class="container d-flex flex-column justify-content-center">
+  <div class="container d-flex flex-column align-items-around flex-wrap">
       <em><h3 class="mt-3 mb-3 text-center">Featured TV Shows:</h3></em>
-<div class=" container d-flex flex-row flex-wrap justify-content-between">
+<div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fT}}
 
-     <div class="col-2 mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}">
+     <div class="mt-4 mb-3 d-flex flex-column align-items-center wrapper">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180px">
      </a>
 
-     <h5 class="mt-2 text-center">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
     </div>
 
     {{/each}}
     </div>
     </div>
-      <div class="container-fluid d-flex flex-row flex-wrap justify-content-between pt-2 pb-2 mt-3 mb-3" style="background-color: #f37121;">
+      <div class="container-fluid d-flex flex-row flex-wrap justify-content-center pt-2 pb-2 mt-3 mb-3" style="background-color: #f37121;">
         
-       <div class="d-flex flex-column justify-content-center col-md-3 "><span class="fa-stack fa-6x">
-           <i style="color:#111d5e; text-align:center; width:100%;" class="fa fa-circle fa-stack-2x container-fluid"></i>
-           <i style="color:#c70039;text-align:center; " class="fa fa-circle fa-stack-1x fa-dollar-sign fa-inverse"></i></span>
-           <h3 class=" text-center pt-2" style="color:#111d5e ;">Low Cost<br /> More Savings</h3>
+       <div class="d-flex flex-column align-items-center col-md-3 col-sm-12"><span class="fa-stack fa-6x">
+           <i style="color:#111d5e;" class="fa fa-circle fa-stack-2x container-fluid"></i>
+           <i style="color:#c70039;" class="fa fa-circle fa-stack-1x fa-dollar-sign fa-inverse"></i></span>
+           <h3 class="text-center   pt-2" style="color:#111d5e ;">Lower Cost, Additional Savings</h3>
            </div>
 
-    <div class="d-flex flex-column col-md-3"><span class="fa-stack fa-6x">
+    <div class="d-flex flex-column align-items-center col-md-3 col-sm-12"><span class="fa-stack fa-6x">
         <i style="color:#111d5e" class="fa fa-circle fa-stack-2x"></i>
         <i style="color:#c70039;" class="fa fa-stack-1x fa-tachometer-alt fa-inverse"></i></span>
-        <h3 class="text-center pt-2" style="color:#111d5e ;">High Quality Resolution</h3>
+        <h3 class="text-center  pt-2" style="color:#111d5e ;">High Quality Resolution in Low Bandwidth</h3>
         </div>
 
  
-    <div class="d-flex flex-column col-md-3"><span class="fa-stack fa-6x">
+    <div class="d-flex flex-column align-items-center col-md-3 col-sm-12"><span class="fa-stack fa-6x">
         <i style="color:#111d5e" class ="fa fa-circle fa-stack-2x"></i>
         <i style="color:#c70039;" class="fab fa-stack-1x fa-slideshare fa-inverse"></i></span>
-        <h3 class="text-center pt-2" style="color:#111d5e ;">Enabled Content<br />Sharing</h3>
+        <h3 class=" text-center pt-2" style="color:#111d5e ;">Enabled Content Sharing</h3>
         </div>
-   <div class="d-flex flex-column col-md-3"><span class="fa-stack fa-6x">
+   <div class="d-flex flex-column align-items-center col-md-3 col-sm-12"><span class="fa-stack fa-6x">
         <i style="color:#111d5e" class="fa fa-circle fa-stack-2x"></i>
         <i style="color:#c70039;" class="fa fa-stack-1x fa-film fa-inverse"></i></span>
-         <h3 class="text-center pt-2" style="color:#111d5e ;">Library of 10,000+<br />Movies and Shows</h3>
+         <h3 class="text-center  pt-2" style="color:#111d5e ;">Library of 10,000+ Movies and Shows</h3>
         </div>
 
 
     </div>
-    <div class="container d-flex flex-column justify-content-center">
+    <div class="container d-flex flex-column align-items-around ">
       <em><h3 class="mt-3 mb-5 text-center">Action:</h3></em>
-<div class=" container d-flex flex-row flex-wrap justify-content-between">
+<div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fAction}}
 
-     <div class="col-2 mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}">
+     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180px">
      </a>
 
-     <h5 class="mt-2 text-center">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
     </div>
 
     {{/each}}
     </div>
     </div>
-    <div class="container d-flex flex-column justify-content-center">
+    <div class="container d-flex flex-column align-items-around">
       <em><h3 class="mt-3 mb-5 text-center">Adventure</h3></em>
-<div class=" container d-flex flex-row flex-wrap justify-content-between">
+<div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fAdventure}}
 
-     <div class="col-2 mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}">
+     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180px">
      </a>
 
-     <h5 class="mt-2 text-center">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
     </div>
 
     {{/each}}
     </div>
     </div>
-    <div class="container d-flex flex-column justify-content-center">
+    <div class="container d-flex flex-column align-items-around">
       <em><h3 class="mt-3 mb-5 text-center">Crime & Thrillers</h3></em>
-<div class=" container d-flex flex-row flex-wrap justify-content-between">
+<div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fCrime}}
 
-     <div class="col-2 mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}">
+     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180 px">
      </a>
 
-     <h5 class="mt-2 text-center">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
     </div>
 
     {{/each}}
     </div>
     </div>
-    <div class="container d-flex flex-column justify-content-center">
+    <div class="container d-flex flex-column align-items-around">
       <em><h3 class="mt-3 mb-5 text-center">Drama</h3></em>
-<div class=" container d-flex flex-row flex-wrap justify-content-between">
+<div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fDrama}}
 
-     <div class="col-2 mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}">
+     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180px">
      </a>
 
-     <h5 class="mt-2 text-center">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
     </div>
 
     {{/each}}
     </div>
     </div>
-    <div class="container d-flex flex-column justify-content-center">
+    <div class="container d-flex flex-column align-items-around">
       <em><h3 class="mt-3 mb-5 text-center">Comedy</h3></em>
-<div class=" container d-flex flex-row flex-wrap justify-content-between">
+<div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fComedy}}
 
-     <div class="col-2 mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}">
+     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180px">
      </a>
 
-     <h5 class="mt-2 text-center">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
     </div>
 
     {{/each}}
