--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -18,7 +18,7 @@
   
 
       <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0 pl-5 ">
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0 ">
           <b><h5 class="text-uppercase mb-0 d-flex flex-row justify-content-start">Site Map</h5></b>
           <ul class="list-unstyled">
             <li class="d-flex flex-row justify-content-start">
