--- a/views/tvDetails.hbs
+++ b/views/tvDetails.hbs
@@ -27,10 +27,10 @@
     {{#each sim}}
 
      <div class="col-2 mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180px">
      </a>
 
-     <h5 class="mt-2 text-center">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
     </div>
 
     {{/each}}
