--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-xl navbar-light ">
+<nav class="navbar navbar-expand-xxl navbar-light ">
   <a class="navbar-brand" href="#">  <img src="/img/popcornflix.png" height="80" class="d-inline-block align-top" alt="Logo">
     
   </a>
