--- a/views/home.hbs
+++ b/views/home.hbs
@@ -60,11 +60,11 @@
 <div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fM}}
 
-     <div class="mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180px">
+     <div class="mt-4 mb-3 d-flex flex-column align-items-center wrapper  col-xl-3 col-lg-4 col-md-12">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" class="posterImg">
      </a>
 
-     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" >{{this.title}}</h5>
     </div>
 
     {{/each}}
@@ -76,11 +76,11 @@
 <div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fT}}
 
-     <div class="mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180px">
+     <div class="mt-4 mb-3 d-flex flex-column align-items-center wrapper  col-xl-3 col-lg-4 col-md-12">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" class="posterImg">
      </a>
 
-     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" >{{this.title}}</h5>
     </div>
 
     {{/each}}
@@ -119,8 +119,8 @@
 <div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fAction}}
 
-     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180px">
+     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper  col-xl-3 col-lg-4 col-md-12">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" class="posterImg">
      </a>
 
      <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
@@ -134,11 +134,11 @@
 <div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fAdventure}}
 
-     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180px">
+     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper  col-xl-3 col-lg-4 col-md-12" >
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" class="posterImg">
      </a>
 
-     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" >{{this.title}}</h5>
     </div>
 
     {{/each}}
@@ -149,11 +149,11 @@
 <div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fCrime}}
 
-     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180 px">
+     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper  col-xl-3 col-lg-4 col-md-12">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" class="posterImg">
      </a>
 
-     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" >{{this.title}}</h5>
     </div>
 
     {{/each}}
@@ -164,11 +164,11 @@
 <div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fDrama}}
 
-     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180px">
+     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper  col-xl-3 col-lg-4 col-md-12">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" class="posterImg">
      </a>
 
-     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" >{{this.title}}</h5>
     </div>
 
     {{/each}}
@@ -179,11 +179,11 @@
 <div class=" container d-flex flex-row flex-wrap justify-content-around">
     {{#each fComedy}}
 
-     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper">
-     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" width="180px">
+     <div class=" mt-4 mb-3 d-flex flex-column align-items-center wrapper  col-xl-3 col-lg-4 col-md-12">
+     <a href="/movieDetails/{{this.id}}"><img src="{{this.smallPosterImg}}" class="posterImg">
      </a>
 
-     <h5 class="mt-2 text-center" style="max-width: 180px;">{{this.title}}</h5>
+     <h5 class="mt-2 text-center" >{{this.title}}</h5>
     </div>
 
     {{/each}}
