--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-xxl navbar-light ">
-  <a class="navbar-brand" href="#">  <img src="/img/popcornflix.png" height="80" class="d-inline-block align-top" alt="Logo">
+  <a class="navbar-brand" href="/">  <img src="/img/popcornflix.png" height="80" class="d-inline-block align-top" alt="Logo">
     
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
