--- a/views/movieDetails.hbs
+++ b/views/movieDetails.hbs
@@ -1,5 +1,5 @@
 
-<div class="container-fluid pl-0 pr-0 ml-0 mr-0"  style="background:linear-gradient(90deg,#111d5e, transparent),url({{data.largePosterImg}})  no-repeat 100% top!important;  ">
+<div class="container-fluid pl-0 pr-0 ml-0 mr-0"  style="background:linear-gradient(90deg,#111d5e, transparent),url({{data.largePosterImg}})  no-repeat 100% cover top!important;  ">
     <div class="d-flex flex-row col-6 mt-5 ">
         <div class="d-flex flex-column col-4 ml-4 mr-5">
             <img src={{data.smallPosterImg}} alt="small Poster Image"  width="100%">
