--- a/views/User/dashboard.hbs
+++ b/views/User/dashboard.hbs
@@ -1,12 +1,12 @@
 <div class="container card mt-4 mb-4" style="background-color: #f37121;">
-  <h5 class="card-header" style="color: #111d5e;">Dashboard</h5>
+  <h5 class="card-header" style="color: #111d5e;">{{user.type}} Dashboard</h5>
   <div class="card-body">
     <h5 class="card-title" style="color: #111d5e;">Welcome to Popcorn Flix!!</h5>
-    <p class="card-text" style="color: #111d5e;">Hello <b>{{fN}} {{lN}}</b> to the best platorm on the web for on-demand movies and tv-shows. </p>
+    <p class="card-text" style="color: #111d5e;">Welcome <b>{{user.firstName}} {{user.lastName}}</b> to the best platorm on the web for on-demand movies and tv-shows. </p>
   </div>
 </div>
 <div class="container card mt-4" style="background-color: #f37121;">
-  <h4 class="card-header" style="color: #111d5e;">{{em}}</h4>
+  <h4 class="card-header" style="color: #111d5e;">Email:{{user.email}}</h4>
   <div class="card-body d-flex flex-column align-content-center">
 <div class="card-deck d-flex flex-row flex-wrap justify-content-center align-content-between container mt-5 mb-5">
   <div class="card d-flex flex-column mt-3 mb-3 mr-3 ml-3" style="width: 350px; height: 300px; background-color: #c70039;">
