--- a/views/User/login.hbs
+++ b/views/User/login.hbs
@@ -4,7 +4,7 @@
             <div class="modal-body">
                 <h4 class = "mt-3 text-center" style="color: #111d5e !important;">Sign in to Popcorn Flix</h4>
     
-                <form action="/log" method="POST">
+                <form action="/User/log" method="POST">
                     <div  class="form-group d-flex flex-column mr-5 ml-5 mt-5">
                         <input type="email" class="form-control pb-3 pt-3 pl-3" name="emailLog" id="emailInputTwo"
                             aria-describedby="emailHelp" placeholder="Enter email" {{#if email}}value={{email}} {{/if}}
