--- a/views/User/register.hbs
+++ b/views/User/register.hbs
@@ -10,7 +10,7 @@
                     <h4 class = "mt-3 text-left" style="color: #111d5e !important;">Create a New Account</h4>
                 </div>
     
-               <form action="/reg" method="POST">
+               <form action="/User/reg" method="POST">
                     <div  class="form-group d-flex flex-column mr-5 ml-5 mt-4">
                         <div class="form-group d-flex flex-container mb-3">
                                 <div>
@@ -32,9 +32,15 @@
                                 </div>
 
                         </div>
-                   
+                         <input type="tel" class="form-control pb-3 pt-3 pl-3 mt-3" name="phone" id="phoneNumT"
+                            placeholder="Enter Phone Number" autocomplete="tel">       
+                    {{#if phoneErr}}
+                    <small id="telephoneHelpBlock" class="form-text text-danger ">
+                        {{phoneErr}}
+                    </small>
+                    {{/if}}      
                                                     
-                        <input type="email" class="form-control pb-3 pt-3 pl-3 " name="emailLogReg" id="emailInputF"
+                        <input type="email" class="form-control pb-3 pt-3 pl-3 mt-3" name="emailLogReg" id="emailInputF"
                             aria-describedby="emailHelp" placeholder="Enter email" 
                             autocomplete="email">
                     {{#if eMErr}}
@@ -42,13 +48,7 @@
                         {{eMErr}}
                     </small>
                     {{/if}}
-                          <input type="tel" class="form-control pb-3 pt-3 pl-3 mt-3" name="phone" id="phoneNumT"
-                            placeholder="Enter Phone Number" autocomplete="tel">       
-                    {{#if phoneErr}}
-                    <small id="telephoneHelpBlock" class="form-text text-danger ">
-                        {{phoneErr}}
-                    </small>
-                    {{/if}}              
+                            
     
                         <input type="password" class="form-control pb-3 pt-3 pl-3 mt-3" name="passLogReg" id="passInputFive"
                             placeholder="Enter password" autocomplete="current-password">
