--- a/views/User/adminDashboard.hbs
+++ b/views/User/adminDashboard.hbs
@@ -9,12 +9,13 @@
   <h4 class="card-header" style="color: #111d5e;">Email: {{user.email}}</h4>
   <div class="card-body d-flex flex-column align-content-center">
 <div class="card-deck d-flex flex-row flex-wrap justify-content-center align-content-between container mt-5 mb-5">
-  <div class="card d-flex flex-column mt-3 mb-3 mr-3 ml-3" style="width: 350px; height: 300px; background-color: #c70039;">
+  <a href="/User/playlist"><div class="card d-flex flex-column mt-3 mb-3 mr-3 ml-3" style="width: 350px; height: 300px; background-color: #c70039;">
     <div class="card-body">
       <h4 class="card-title" style="color: #111d5e;">Your Playlist</h4>
       <div class="d-flex flex-row justify-content-center" style="font-size:20px;"><i class="fas fa-play-circle fa-10x" style="color:  #111d5e;"></i></div>
    </div>
   </div>
+  </a>
   <div class="card d-flex flex-column mt-3 mb-3 mr-3 ml-3" style="width: 350px; height: 300px; background-color: #c70039;">
     <div class="card-body">
       <h4 class="card-title" style="color: #111d5e;">Recommended Movies</h4>
